# tools-config

./: CMakeLists.txt  README.md  esrocos.osdeps  init.rb  manifest.xml
autoproj/: esrocos_autoproj.rb
cmake_macros/: add_dependencies.cmake  build_project.cmake  esrocos.cmake
cmake_toolchains/: toolchain-rtems-gaisler.cmake
modules/: esrocos-config.cmake.in  esrocos.cmake
templates/: CMakeLists.txt.in  CMakeLists.txt.in_component  pkg-config-template.pc.in
